# blog-rs

./: .env  Cargo.toml  shell.nix
src/: lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/entity/: albums.rs  article_tags.rs  articles.rs  categories.rs  mod.rs  photos.rs  posts.rs  prelude.rs  tags.rs  users.rs
src/handler/: albums_handler.rs  article_handler.rs  mod.rs  photo_handler.rs  post_handler.rs  user_handler.rs
src/router/: admin_router.rs  albums_router.rs  article_router.rs  mod.rs  post_router.rs
